Chap13 인그레스/13-03. 모더니제이션/session-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
spec:
  selector:
    matchLabels:
      app: session
  replicas: 10
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
        - image: 'maho/session-test:latest'
          name: session
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: session-svc
spec:
  selector:
    app: session
  ports:
    - port: 9080
      targetPort: 80
